# competitive_algorithms

./: .pre-commit-config.yaml  README.md  pyproject.toml
competitive_algorithms/: graph.py  mathematics.py  tree.py
problems/abc035/: c.py
problems/abc077/: c.py
problems/abc085/: a.py
problems/abc142/: d.py  test_d.py
problems/abc152/: d.py
problems/abc177/: e.py
problems/abc185/: f.py
problems/abc186/: e.py
problems/abc187/: a.py  b.py  c.py  d.py  e.py
problems/abc188/: a.py  b.py  c.py  d.py  e.py  f.py
problems/agc005/: a.py
problems/arc006/: c.py
problems/arc037/: c.py
problems/arc041/: b.py
problems/atc001/: b.py
problems/caddi2018/: c.py
problems/template/: README.md  conftest.py  run.sh
problems/template/tests/: answer-1.txt  test.py
tests/: test_graph.py  test_math.py
