[tool.poetry]
name = "competitive_algorithms"
version = "0.1.0"
description = ""
authors = ["shumpei-kikuta"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^20.8b1"
pre-commit = "^2.9.3"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
